src/objects/DSCORGPKG__DiscoverOrg_Technologies__c.object
<CustomObject>
    <fields>
        <fullName>DSCORGPKG__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>DiscoverOrg Technologies</relationshipLabel>
        <relationshipName>DiscoverOrg_Technologies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>DiscoverOrg Technologies</relationshipLabel>
        <relationshipName>DiscoverOrg_Technologies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__DiscoverOrg_ID__c</fullName>
        <description>DiscoverOrg DB object ID</description>
        <label>DiscoverOrg ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>DiscoverOrg Technologies</relationshipLabel>
        <relationshipName>DiscoverOrg_Technologies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Technology_Category__c</fullName>
        <description>Technology Category would be captured in this field</description>
        <label>Technology Category</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Technology_Status__c</fullName>
        <label>Technology Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Technology_Vendor__c</fullName>
        <label>Technology Vendor</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>DiscoverOrg Technologies</label>
    <listViews>
        <fullName>DSCORGPKG__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>DiscoverOrg Technologies Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DiscoverOrg Technologies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>